--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,6 +29,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0  
+      - name: Test Application
+        run: 
+          - dotnet test --configuration Release --no-restore
+          - dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
         env:
