--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,6 +12,7 @@ jobs:
       contents: write
       pull-requests: write
       checks: write
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -20,24 +22,23 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Install ReportGenerator
+        run: dotnet tool install -g dotnet-reportgenerator-globaltool
+
       - name: Restore Dependencies
         run: dotnet restore
 
       - name: Build Application
         run: dotnet build --configuration Release  
 
-      - name: Test Application
+      - name: Build and Test with Code Coverage
         run: |
-          dotnet test --configuration Release --no-restore 
-
-      - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.3
+          dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
+          codecov
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-          
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: MariiaParakhina/readsphere_api_gateway
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+      - name: Generate Coverage Report
+        run: |
+          reportgenerator "-reports:Test.Core/coverage.cobertura.xml" "-targetdir:coverage_report" "-reporttypes:Html"
+ 
