--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ name: CI
 on:
   push:
     branches:
-      - main
-
+      - main 
+  repository_dispatch:
+    types: [trigger-ci]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -51,15 +52,14 @@ jobs:
         working-directory: ./
         run: docker build -f ./Dockerfile -t api-gateway ./
 
-      - name: Trigger Main Repository Workflow
-        uses: actions/github-script@v4
+      - name: Trigger CI Workflow
+        uses: peter-evans/repository-dispatch@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const response = await github.request('GET /repos/MariiaParakhina/readshpere/actions/runs', {
-              owner: 'MariiaParakhina',
-              repo: 'readshpere'
-            });
+          token: ${{ secrets.G_ACCESS_TOKEN }}
+          repository: MariiaParakhina/readshpere
+          event-type: ci_trigger
 
+      
+ 
       
  
