--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
           uses: benc-uk/workflow-dispatch@v1
           with:
             workflow: Main Workflow
-            token: ${{ secrets.Q_ACCESS_TOKEN }}
+            token: ${{ secrets.G_ACCESS_TOKEN }}
             repo: MariiaParakhina/readsphere
             type: deploy-event
  
