--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,13 +53,15 @@ jobs:
   trigger:
       runs-on: ubuntu-latest
       steps:
-        - name: Trigger Workflow in ReadSphere
-          uses: benc-uk/workflow-dispatch@v1
-          with:
-            workflow: Main Workflow
-            token: ${{ secrets.G_ACCESS_TOKEN }}
-            repo: MariiaParakhina/readsphere
-            type: deploy-event
+        
+      - name: Run curl command
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/ci.yml/dispatches \ 
  
       
  
