--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,19 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         
-      - name: Run curl command
-        run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/ci.yml/dispatches \ 
+      - name: Trigger Workflow
+        uses: repo-sync/pull-request@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: MariiaParakhina/readshpere
+          event_type: ci_trigger
+          script: |
+            const response = await octokit.request('POST /repos/MariiaParakhina/readsphere/actions/workflows/ci.yaml/dispatches', {
+              owner: 'MariiaParakhina',
+              repo: 'readsphere',
+              workflow_id: 'ci.yaml',
+              ref: 'main',
+            }); 
  
       
  
