--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,19 +51,17 @@ jobs:
         run: docker build -f ./Dockerfile -t api-gateway ./
 
   
-  trigger:
+  trigger_workflow:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Workflow
         run: |
-          const response = await octokit.request('POST /repos/MariiaParakhina/readsphere/actions/workflows/ci.yaml/dispatches', {
-            owner: 'MariiaParakhina',
-            repo: 'readsphere',
-            workflow_id: 'ci.yaml',
-            ref: 'main',
-          });
-        env:
-          GITHUB_TOKEN: ${{ secrets.G_ACCESS_TOKEN }}
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/ci.yml/dispatches \ 
 
  
       
