--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,12 @@ jobs:
   trigger_workflow:
       runs-on: ubuntu-latest
       steps:
+        - name: test
+          run: |
+          curl -X GET \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization:  Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
+            https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows
         - name: Trigger Workflow
           run: |
             curl -L \
@@ -62,7 +68,7 @@ jobs:
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/WORKFLOW_ID/dispatches
+              https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/ci.yml/dispatches
 
  
       
