--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,17 +52,14 @@ jobs:
 
   trigger_workflow:
     runs-on: ubuntu-latest
-    steps:
-     
+    steps:     
       - name: Trigger Workflow
-        run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
+       run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
+            -H "Content-Type: application/json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
+            -d '{"ref": "main"}' \
             https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/90898442/dispatches
-
- 
-      
  
