--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,17 @@ jobs:
         run: dotnet restore
 
       - name: Build Application
-        run: dotnet build --configuration Release  
-
+        run: dotnet build --configuration Release      
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: Build and Test with Code Coverage
         run: |
           dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
@@ -38,20 +47,18 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: MariiaParakhina/readsphere_book_microservice  
-
-
       - name: Run Qodana Scan
         uses: JetBrains/qodana-action@v2023.3
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-      
+
+  trigger_deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps: 
       - name: Build image
         working-directory: ./
-        run: docker build -f ./Dockerfile -t api-gateway ./
-
-  trigger_workflow:
-    runs-on: ubuntu-latest
-    steps:     
+        run: docker build -f ./Dockerfile -t api-gateway ./    
       - name: Trigger Workflow
         run: |
             curl -X POST \
