--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,9 @@ jobs:
   trigger_deploy:
     runs-on: ubuntu-latest
     needs: test
-    steps: 
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: Build image
         working-directory: ./
         run: docker build -f ./Dockerfile -t api-gateway ./    
