--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         working-directory: ./
         run: docker build -f ./Dockerfile -t api-gateway ./   
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u Mariia5345 --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
       - name: Push image to Docker Hub
         run: docker push Mariia5345/api-gateway 
