--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
       - name: Push image to Docker Hub
-        run: docker push Mariia5345/api-gateway 
+        run: docker push mariia5345/api-gateway 
       - name: Trigger Workflow
         run: |
             curl -X POST \
