--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,12 +60,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Build image
         working-directory: ./
-        run: docker build -f ./Dockerfile -t api-gateway ./   
+        run: docker build -f ./Dockerfile -t api-gateway:latest ./   
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
       - name: Push image to Docker Hub
-        run: docker push mariia5345/api-gateway 
+        run: docker push mariia5345/api-gateway :latest
       - name: Trigger Workflow
         run: |
             curl -X POST \
