--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build image
         working-directory: ./
-        run: docker build -f ./Dockerfile -t api-gateway:latest ./   
+        run: docker build -f Dockerfile -t api-gateway:latest .
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
