--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,8 @@ jobs:
       - name: Build image
         working-directory: ./
         run: docker build -f Dockerfile -t api-gateway:latest .
+      - name: check
+        run: docker images
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
