--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,9 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
 
       - name: Push image to Docker Hub
-        run: docker push docker.io/library/mariia5345/api-gateway:latest
+        run: |
+          docker tag docker.io/library/api-gateway:latest mariia5345/api-gateway:latest
+          docker push mariia5345/api-gateway:latest
       - name: Trigger Workflow
         run: |
             curl -X POST \
