--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           docker tag docker.io/library/api-gateway:latest mariia5345/api-gateway:latest
           docker push mariia5345/api-gateway:latest
-  trigger_deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: docker
     steps:
