--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,59 +13,67 @@ jobs:
       checks: write
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
 
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.x'
+  #     - name: Setup .NET SDK
+  #       uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: '8.x'
 
-      - name: Install ReportGenerator
-        run: dotnet tool install -g dotnet-reportgenerator-globaltool
+  #     - name: Install ReportGenerator
+  #       run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
-      - name: Restore Dependencies
-        run: dotnet restore
+  #     - name: Restore Dependencies
+  #       run: dotnet restore
 
-      - name: Build Application
-        run: dotnet build --configuration Release      
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Build and Test with Code Coverage
-        run: |
-          dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: MariiaParakhina/readsphere_api_gateway
-      - name: Run Qodana Scan
-        uses: JetBrains/qodana-action@v2023.3
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+  #     - name: Build Application
+  #       run: dotnet build --configuration Release      
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   permissions:
+  #     contents: write
+  #     pull-requests: write
+  #     checks: write
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
+  #     - name: Build and Test with Code Coverage
+  #       run: |
+  #         dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
+  #     - name: Upload coverage reports to Codecov
+  #       uses: codecov/codecov-action@v4.0.1
+  #       with:
+  #         token: ${{ secrets.CODECOV_TOKEN }}
+  #         slug: MariiaParakhina/readsphere_api_gateway
+  #     - name: Run Qodana Scan
+  #       uses: JetBrains/qodana-action@v2023.3
+  #       env:
+  #         QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
   docker:
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       - name: Build image
         working-directory: ./
-        run: docker build -f Dockerfile -t api-gateway:latest .   
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
-      - name: Push image to Docker Hub
         run: |
-          docker tag docker.io/library/api-gateway:latest mariia5345/api-gateway:latest
-          docker push mariia5345/api-gateway:latest
+          docker build -f Dockerfile -t api-gateway .   
+          docker tag api-gateway gcr.io/readsphere/api-gateway
+          docker push gcr.io/readsphere/api-gateway
+
+      # - name: Log in to Docker Hub
+      #   run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
+      # - name: Push image to Docker Hub
+      #   run: |
+      #     docker tag docker.io/library/api-gateway:latest mariia5345/api-gateway:latest
+      #     docker push mariia5345/api-gateway:latest
   deploy:
     runs-on: ubuntu-latest
     needs: docker
