--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,12 @@ jobs:
         uses: google-github-actions/auth@v0.6.0
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      - name: Build image
-        working-directory: ./
-        run: |
-          docker build -f Dockerfile -t api-gateway .   
-          docker tag api-gateway gcr.io/readsphere/api-gateway
-          docker push gcr.io/readsphere/api-gateway
+      # - name: Build image
+      #   working-directory: ./
+      #   run: |
+      #     docker build -f Dockerfile -t api-gateway .   
+      #     docker tag api-gateway gcr.io/readsphere/api-gateway
+      #     docker push gcr.io/readsphere/api-gateway
 
       # - name: Log in to Docker Hub
       #   run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
