--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,10 +57,18 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Authenticate to Google Cloud
+        id: auth
         uses: google-github-actions/auth@v0.6.0
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+      
+      - name: Save credentials file path
+        run: echo "GCP_CREDS_PATH=${{ steps.auth.outputs.credentials_file }}" >> $GITHUB_ENV
+
       # - name: Build image
       #   working-directory: ./
       #   run: |
