--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,22 +59,21 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+ 
+    
+    - name: Save credentials file path
+      run: echo "GCP_CREDS_PATH=${{ steps.auth.outputs.credentials_file }}" >> $GITHUB_ENV
 
       - name: Authenticate to Google Cloud
-        id: auth
         uses: google-github-actions/auth@v0.6.0
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-      
-      - name: Save credentials file path
-        run: echo "GCP_CREDS_PATH=${{ steps.auth.outputs.credentials_file }}" >> $GITHUB_ENV
-
-      # - name: Build image
-      #   working-directory: ./
-      #   run: |
-      #     docker build -f Dockerfile -t api-gateway .   
-      #     docker tag api-gateway gcr.io/readsphere/api-gateway
-      #     docker push gcr.io/readsphere/api-gateway
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+      - name: Build image
+        working-directory: ./
+        run: |
+          docker build -f Dockerfile -t api-gateway .   
+          docker tag api-gateway gcr.io/readsphere/api-gateway
+          docker push gcr.io/readsphere/api-gateway
 
       # - name: Log in to Docker Hub
       #   run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
