--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,16 +59,18 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Build image
+      working-directory: ./
+      run: |
+        docker build -f Dockerfile -t api-gateway . 
+        docker tag api-gateway gcr.io/readsphere/api-gateway 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v0.6.0
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       - name: Build image
         working-directory: ./
-        run: |
-          docker build -f Dockerfile -t api-gateway .   
-          docker tag api-gateway gcr.io/readsphere/api-gateway
-          docker push gcr.io/readsphere/api-gateway
+        run: docker push gcr.io/readsphere/api-gateway
 
       # - name: Log in to Docker Hub
       #   run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
