--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,8 @@ jobs:
       - name: Build image
         working-directory: ./
         run: docker push  gcr.io/readsphere/api-gateway   
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       # - name: Log in to Docker Hub
       #   run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
