--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,22 +57,32 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Build
-        working-directory: ./
-        run: |
-          docker build -f Dockerfile -t api-gateway . 
-          docker tag api-gateway gcr.io/readsphere/api-gateway 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v0.6.0
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.3.0
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      - name: set up google SDK
-        uses: google-github-actions/setup-gcloud@v1
-      - name: Build image
-        working-directory: ./
-        run: docker push  gcr.io/readsphere/api-gateway   
+          version: '333.0.0'
+          project_id: readsphere
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      - name: Build and Push Docker Image
+        run: |
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/api-gateway .
+        env:
+          CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE: ${{ secrets.GCP_SA_KEY }}
+      # - name: Build
+      #   working-directory: ./
+      #   run: |
+      #     docker build -f Dockerfile -t api-gateway . 
+      #     docker tag api-gateway gcr.io/readsphere/api-gateway 
+      # - name: Authenticate to Google Cloud
+      #   uses: google-github-actions/auth@v0.6.0
+      #   with:
+      #     credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+      # - name: set up google SDK
+      #   uses: google-github-actions/setup-gcloud@v1
+      # - name: Build image
+      #   working-directory: ./
+      #   run: docker push  gcr.io/readsphere/api-gateway   
         
 
       # - name: Log in to Docker Hub
