--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,16 +57,19 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Build and push Docker image to GCR
+      - name: set up google SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with: 
+          project_id: readsphere
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          export_default_credentials: true
+      - name: build and push
         env:
-          PROJECT_ID: readsphere
-          SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_CREDENTIALS }}
-        run: |
-          echo $SERVICE_ACCOUNT_KEY > /tmp/gcp_key.json
-          gcloud auth activate-service-account --key-file=/tmp/gcp_key.json
-          gcloud config set project $PROJECT_ID
-          docker build -t gcr.io/$PROJECT_ID/my-image .
-          docker push gcr.io/$PROJECT_ID/my-image
+          GOOGLE_PROJECT: readsphere
+        runs: |
+          gcloud auth configure docker us-docker.pkg.dev
+          docker build -t us-docker.pkg.dev/readsphere/api-gateway:latest .
+          docker push us-docker.pkg.dev/readsphere/api-gateway:latest
       # - name: Build
       #   working-directory: ./
       #   run: |
@@ -76,8 +79,7 @@ jobs:
       #   uses: google-github-actions/auth@v0.6.0
       #   with:
       #     credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      # - name: set up google SDK
-      #   uses: google-github-actions/setup-gcloud@v1
+
       # - name: Build image
       #   working-directory: ./
       #   run: docker push  gcr.io/readsphere/api-gateway   
