--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - name: build and push
         env:
           GOOGLE_PROJECT: readsphere
-        runs: |
+        run: |
           gcloud auth configure docker us-docker.pkg.dev
           docker build -t us-docker.pkg.dev/readsphere/api-gateway:latest .
           docker push us-docker.pkg.dev/readsphere/api-gateway:latest
