fix another error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
         env:
           GOOGLE_PROJECT: readsphere
         run: |
-          gcloud auth configure docker us-docker.pkg.dev
+          gcloud auth configure-docker us-docker.pkg.dev
           docker build -t us-docker.pkg.dev/readsphere/api-gateway:latest .
           docker push us-docker.pkg.dev/readsphere/api-gateway:latest
       # - name: Build
