--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,19 +57,19 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: set up google SDK
-        uses: google-github-actions/setup-gcloud@v1
-        with: 
-          project_id: readsphere
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-          export_default_credentials: true
-      - name: build and push
-        env:
-          GOOGLE_PROJECT: readsphere
-        run: |
-          gcloud auth configure-docker us-docker.pkg.dev
-          docker build -t us-docker.pkg.dev/readsphere/api-gateway:latest .
-          docker push us-docker.pkg.dev/readsphere/api-gateway:latest
+      # - name: set up google SDK
+      #   uses: google-github-actions/setup-gcloud@v1
+      #   with: 
+      #     project_id: readsphere
+      #     service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+      #     export_default_credentials: true
+      # - name: build and push
+      #   env:
+      #     GOOGLE_PROJECT: readsphere
+      #   run: |
+      #     gcloud auth configure-docker us-docker.pkg.dev
+      #     docker build -t us-docker.pkg.dev/readsphere/api-gateway:latest .
+      #     docker push us-docker.pkg.dev/readsphere/api-gateway:latest
      
   deploy:
     runs-on: ubuntu-latest
