--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,9 @@ jobs:
           GOOGLE_PROJECT: readsphere
         run: |
           gcloud auth configure-docker us-docker.pkg.dev
-          docker build -t gcr.io/readsphere/my-repo .
-          gcloud artifacts repositories create gcr.io/readsphere/my-repo --repository-format=docker --location=us
-          docker push gcr.io/readsphere/my-repo .
+          docker build -t my-repo .
+          gcloud artifacts repositories create my-repo --repository-format=docker --location=us
+          docker push my-repo .
      
   deploy:
     runs-on: ubuntu-latest
