--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,13 +73,13 @@ jobs:
       #     project_id: readsphere
       #     service_account_key: ${{ secrets.GCP_CREDENTIALS }}
       #     export_default_credentials: true
-      - name: build and push
-        env:
-          GOOGLE_PROJECT: readsphere
-        run: |         
-          docker build -t us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway  .
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev            
-          docker push us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway
+      # - name: build and push
+        # env:
+          # GOOGLE_PROJECT: readsphere
+        # run: |         
+          # docker build -t us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway  .
+          # gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev            
+          # docker push us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway
      
   deploy:
     runs-on: ubuntu-latest
