implement TLS configuration
implement TLS configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpsPolicy": "Debug" 
     }
   },
   "AllowedHosts": "*",
@@ -17,9 +18,16 @@
     },
     "Clusters": {
       "book-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [ "Tls11", "Tls12" ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
         "Destinations": {
           "book-api-destination": {
-            "Address": "http://book-api:64131"
+            "Address": "https://book-api:443",            
+            "Metadata": {
+              "Scheme": "https"               
+            }
           }
         }
       }
