--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           run:  echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
             
         - name: Build Docker Image
-          run:  docker build -t ${{ secrets.CI_REGISTRY_IMAGE}}:latest . 
+          run:  docker build -t ${{ secrets.CI_REGISTRY_IMAGE}} . 
         - name: Push Docker Image
           run: docker push ${{ secrets.CI_REGISTRY_IMAGE}}:latest 
      
