--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.HttpsPolicy": "Debug" 
+      "Microsoft.AspNetCore.HttpsPolicy": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -37,21 +37,27 @@
     "Clusters": {
       "book-api-cluster": {
         "HttpClient": {
-          "SslProtocols": [ "Tls11", "Tls12" ],
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
           "book-api-destination": {
-            "Address": "https://book-api:443",            
+            "Address": "https://book-api:443",
             "Metadata": {
-              "Scheme": "https"               
+              "Scheme": "https"
             }
           }
         }
       },
       "account-api-cluster": {
         "HttpClient": {
-          "SslProtocols": [ "Tls11", "Tls12" ],
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
@@ -65,7 +71,10 @@
       },
       "auth-api-cluster": {
         "HttpClient": {
-          "SslProtocols": [ "Tls11", "Tls12" ],
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
@@ -75,20 +84,24 @@
               "Scheme": "https"
             }
           }
+        }
+      },
+      "progress-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
+          "DangerousAcceptAnyServerCertificate": true
         },
-        "progress-api-cluster": {
-          "HttpClient": {
-            "SslProtocols": [ "Tls11", "Tls12" ],
-            "DangerousAcceptAnyServerCertificate": true
-          },
-          "Destinations": {
-            "progress-api-destination": {
-              "Address": "https://progress-api:446",
-              "Metadata": {
-                "Scheme": "https"
-              }
+        "Destinations": {
+          "progress-api-destination": {
+            "Address": "https://progress-api:446",
+            "Metadata": {
+              "Scheme": "https"
             }
           }
+        }
       }
     }
   }
