--- a/appsettings.json
+++ b/appsettings.json
@@ -46,6 +46,13 @@
         "Destinations": {
           "book-api-destination": {
             "Address": "https://book-api:443",
+            
+            "Metadata": {
+              "Scheme": "https"
+            }
+          },
+          "book-api-kubernetes-destination": {
+            "Address": "https://book-api.default.svc.cluster.local:443",
             "Metadata": {
               "Scheme": "https"
             }
