--- a/appsettings.json
+++ b/appsettings.json
@@ -36,6 +36,7 @@
     },
     "Clusters": {
       "book-api-cluster": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
@@ -45,7 +46,13 @@
         },
         "Destinations": {
           "book-api-kubernetes-destination": {
-            "Address": "https://book-api.default.svc.cluster.local:443",
+            "Address": "https://book-api.book.svc.cluster.local:443",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          },
+          "book-api-docker-destination": {
+            "Address": "https://book-api:443",
             "Metadata": {
               "Scheme": "https"
             }
@@ -54,6 +61,7 @@
         }
       },
       "account-api-cluster": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
@@ -62,6 +70,12 @@
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
+          "progress-api-kubernetes-destination": {
+            "Address": "https://account-api.account.svc.cluster.local:444",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          },
           "account-api-destination": {
             "Address": "https://account-api:444",
             "Metadata": {
@@ -71,6 +85,7 @@
         }
       },
       "auth-api-cluster": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
@@ -79,6 +94,12 @@
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
+          "auth-api-kubernetes-destination": {
+            "Address": "https://auth-api.auth.svc.cluster.local:445",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          },
           "auth-api-destination": {
             "Address": "https://auth-api:445",
             "Metadata": {
@@ -88,6 +109,7 @@
         }
       },
       "progress-api-cluster": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
@@ -96,7 +118,13 @@
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
-          "progress-api-destination": {
+          "progress-api-kubernetes-destination": {
+            "Address": "https://progress-api.progress.svc.cluster.local:446",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          },
+          "progress-api-docker-destination": {
             "Address": "https://progress-api:446",
             "Metadata": {
               "Scheme": "https"
