update api gateway

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,107 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpsPolicy": "Debug"
+    }
+  },
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "book-api-route": {
+        "ClusterId": "book-api-cluster",
+        "Match": {
+          "Path": "/api/Book/{**catch-all}"
+        }
+      },
+      "account-api-route": {
+        "ClusterId": "account-api-cluster",
+        "Match": {
+          "Path": "/api/Account/{**catch-all}"
+        }
+      },
+      "auth-api-route": {
+        "ClusterId": "auth-api-cluster",
+        "Match": {
+          "Path": "/api/Auth/{**catch-all}"
+        }
+      },
+      "progress-api-route": {
+        "ClusterId": "progress-api-cluster",
+        "Match": {
+          "Path": "/api/Progress/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "book-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+        "Destinations": {
+          "book-api-docker-destination": {
+            "Address": "https://book-api:443",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          }
+
+        }
+      },
+      "account-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+        "Destinations": {
+           
+          "account-api-destination": {
+            "Address": "https://account-api:444",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          }
+        }
+      },
+      "auth-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+          "auth-api-destination": {
+            "Address": "https://auth-api:445",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          }
+        }
+      },
+      "progress-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls11",
+            "Tls12"
+          ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+          "progress-api-docker-destination": {
+            "Address": "https://progress-api:446",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          }
+        }
+      }
     }
   }
 }
