--- a/appsettings.json
+++ b/appsettings.json
@@ -32,11 +32,23 @@
         "Match": {
           "Path": "/api/Progress/{**catch-all}"
         }
+      },
+      "prometheus-route": {
+        "ClusterID":"prometheus-cluster",
+        "Match": {
+          "Path": "/prometheus/{**catch-all}"
+        }
       }
     },
     "Clusters": {
-      "book-api-cluster": {
-       
+      "prometheus-cluster": {
+        "Destinations": {
+          "prometheus-kubernetes-destination": {
+            "Address": "http://promethues-service.prometheus.svc.cluster.local:9090"
+          }
+        }
+      },
+      "book-api-cluster": {       
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
