--- a/appsettings.json
+++ b/appsettings.json
@@ -44,7 +44,7 @@
       "prometheus-cluster": {
         "Destinations": {
           "prometheus-kubernetes-destination": {
-            "Address": "http://promethues-service.prometheus.svc.cluster.local:9090"
+            "Address": "http://prometheus-service.prometheus.svc.cluster.local:9090"
           }
         }
       },
