--- a/deplyment.yaml
+++ b/deplyment.yaml
@@ -18,3 +18,5 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 64212
+      imagePullSecrets:
+        - name: regcred 
