--- a/appsettings.json
+++ b/appsettings.json
@@ -32,11 +32,10 @@
         "Match": {
           "Path": "/api/Progress/{**catch-all}"
         }
-      }      
+      }
     },
     "Clusters": {
-      
-      "book-api-cluster": {       
+      "book-api-cluster": {
         "HttpClient": {
           "SslProtocols": [
             "Tls11",
@@ -44,13 +43,16 @@
           ],
           "DangerousAcceptAnyServerCertificate": true
         },
+        "LoadBalancing": {
+          "Mode": "Random"
+        },
         "Destinations": {
           "book-api-kubernetes-destination": {
             "Address": "https://book-api.book.svc.cluster.local:1026",
             "Metadata": {
               "Scheme": "https"
             }
-          }          
+          }
         }
       },
       "account-api-cluster": {
@@ -60,6 +62,9 @@
             "Tls12"
           ],
           "DangerousAcceptAnyServerCertificate": true
+        },
+        "LoadBalancing": {
+          "Mode": "Random"
         },
         "Destinations": {
           "progress-api-kubernetes-destination": {
@@ -78,6 +83,9 @@
           ],
           "DangerousAcceptAnyServerCertificate": true
         },
+        "LoadBalancing": {
+          "Mode": "Random"
+        },
         "Destinations": {
           "auth-api-kubernetes-destination": {
             "Address": "https://auth-api.auth.svc.cluster.local:1025",
@@ -94,6 +102,9 @@
             "Tls12"
           ],
           "DangerousAcceptAnyServerCertificate": true
+        },
+        "LoadBalancing": {
+          "Mode": "Random"
         },
         "Destinations": {
           "progress-api-kubernetes-destination": {
